Updated promo and listicle scss to correct ordered list overlap when both components are present

--- a/styleguide/source/assets/scss/01-atoms/_listicle.scss
+++ b/styleguide/source/assets/scss/01-atoms/_listicle.scss
@@ -14,7 +14,7 @@
 
     &::before {
       content: counter(ama-listicle);
-      position: absolute;
+      position: relative;
       background: $homepagePurple;
       color: $white;
       width: 30px;
@@ -23,10 +23,11 @@
       text-align: center;
       font-size: 22px;
       font-weight: 600;
-      display: flex;
+      display: inline-flex;
       align-items: center;
       justify-content: center;
-      left: -43px
+      left: -43px;
+      margin-right: -35px;
     }
 
     &-sub {
@@ -37,6 +38,10 @@
         @include gutter($margin-bottom-half...);
         @include gutter($margin-top-half...);
       }
+    }
+
+    h3 {
+      display: inline;
     }
   }
 
