--- a/styleguide/source/assets/scss/02-molecules/_promo.scss
+++ b/styleguide/source/assets/scss/02-molecules/_promo.scss
@@ -24,7 +24,7 @@
     @include gutter($padding-top-full...);
     @include gutter($padding-right-full...);
     @include gutter($padding-bottom-full...);
-    @include gutter($margin-right-full...);
+    margin-right: 71px;
     @include gutter($margin-bottom-full...);
     @include breakpoint($bp-small) {
       float: left;
